--- a/releng/helm-charts/dirigible-kyma/templates/xsuaaserviceinstance.yaml
+++ b/releng/helm-charts/dirigible-kyma/templates/xsuaaserviceinstance.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.keycloak.enabled false }}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
@@ -12,7 +13,7 @@ spec:
     xsappname: {{ include "dirigible.fullname" . }}-xsuaa
     oauth2-configuration:
       redirect-uris:
-      - https://{{ .Values.apirule.host }}
+      - https://{{ .Release.Name }}.{{ .Values.apirule.host }}
       token-validity: 7200
     role-collections:
     - description: Dirigible Developer
@@ -63,3 +64,4 @@ spec:
   usedBy:
     kind: deployment
     name: {{ include "dirigible.fullname" . }}
+{{- end }}
