--- a/releng/helm-charts/dirigible-kyma/values.yaml
+++ b/releng/helm-charts/dirigible-kyma/values.yaml
@@ -6,6 +6,7 @@ replicaCount: 1
 
 image:
   repository: dirigiblelabs/dirigible-sap-kyma
+  repositoryKeycloak: dirigiblelabs/dirigible-keycloak
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -43,6 +44,31 @@ apirule:
 volume:
   enabled: true
   storage: 1Gi
+
+database:
+  enabled: false
+  image: postgres:13
+  driver: org.postgresql.Driver
+  username: dirigible
+  password: dirigible
+
+keycloak:
+  enabled: false
+  install: false
+  name: keycloak
+  image: jboss/keycloak:12.0.4
+  namespace: auth
+  username: admin
+  password: admin
+  replicaCount: 1
+  realm: master
+  clientId: dirigible
+  database:
+    enabled: true
+    image: postgres:13
+    storage: 1Gi
+    username: keycloak
+    password: keycloak
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
