--- a/releng/helm-charts/dirigible-kyma/templates/keycloak.yaml
+++ b/releng/helm-charts/dirigible-kyma/templates/keycloak.yaml
@@ -17,11 +17,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.keycloak.name }}-database
-  namespace: {{ $.Values.keycloak.namespace }}
   labels:
     app: {{ .Values.keycloak.name }}-database
 spec:
-  replicas: {{ .Values.keycloak.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: {{ .Values.keycloak.name }}-database
@@ -45,13 +44,31 @@ spec:
             - name: POSTGRES_PASSWORD
               value: {{ $.Values.keycloak.database.password }}
           ports:
-            - name: http
-              containerPort: 8080
+            - name: jdbc
+              containerPort: 5432
               protocol: TCP
       volumes:
         - name: {{ .Values.keycloak.name }}-database-volume
           persistentVolumeClaim:
             claimName: {{ .Values.keycloak.name }}-database-claim
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.keycloak.name }}-database
+  labels:
+    app: {{ .Values.keycloak.name }}-database
+spec:
+  type: ClusterIP
+  ports:
+    - port: 5432
+      targetPort: jdbc
+      protocol: TCP
+      name: jdbc
+  selector:
+    app: {{ .Values.keycloak.name }}-database
 
 {{- end }}
 
@@ -61,7 +78,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.keycloak.name }}
-  namespace: {{ $.Values.keycloak.namespace }}
   labels:
     app: {{ .Values.keycloak.name }}
 spec:
@@ -106,7 +122,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.keycloak.name }}
-  namespace: {{ $.Values.keycloak.namespace }}
   labels:
     app: {{ .Values.keycloak.name }}
 spec:
@@ -125,7 +140,6 @@ apiVersion: gateway.kyma-project.io/v1alpha1
 kind: APIRule
 metadata:
   name: {{ .Values.keycloak.name }}
-  namespace: {{ $.Values.keycloak.namespace }}
 spec:
   gateway: kyma-gateway.kyma-system.svc.cluster.local
   rules:
