--- a/releng/helm-charts/dirigible-kyma/templates/xsuaaserviceinstance.yaml
+++ b/releng/helm-charts/dirigible-kyma/templates/xsuaaserviceinstance.yaml
@@ -1,4 +1,5 @@
 {{- if eq .Values.keycloak.enabled false }}
+{{- if .Values.kyma.enabled }}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
@@ -64,4 +65,5 @@ spec:
   usedBy:
     kind: deployment
     name: {{ include "dirigible.fullname" . }}
+{{- end }}
 {{- end }}
