--- a/releng/helm-charts/dirigible/templates/keycloak.yaml
+++ b/releng/helm-charts/dirigible/templates/keycloak.yaml
@@ -136,6 +136,7 @@ spec:
 
 ---
 
+{{- if .Values.kyma.apirule.enabled -}}
 apiVersion: gateway.kyma-project.io/v1alpha1
 kind: APIRule
 metadata:
@@ -155,7 +156,41 @@ spec:
     - HEAD
     path: /.*
   service:
-    host: {{ .Values.keycloak.name }}.{{ .Values.apirule.host }}
+    host: {{ .Values.keycloak.name }}.{{ .Values.kyma.apirule.host }}
     name: {{ .Values.keycloak.name }}
     port: 8080
+{{- end }}
+
+---
+
+{{- if .Values.ingress.enabled -}}
+{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
+kind: Ingress
+metadata:
+  name: {{ .Values.keycloak.name }}
+  labels:
+    app: {{ .Values.keycloak.name }}
+  {{- with .Values.ingress.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+{{- if .Values.ingress.tls }}
+  tls:
+    - hosts:
+        - {{ .Values.keycloak.name }}.{{ .Values.ingress.host }}
+      secretName: {{ .Values.keycloak.name }}-tls
+{{- end }}
+  rules:
+    - host: {{ .Values.keycloak.name }}.{{ .Values.ingress.host }}
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: {{ .Values.keycloak.name }}
+              servicePort: 8080
 {{- end }}
