--- a/releng/helm-charts/dirigible/templates/dirigible.yaml
+++ b/releng/helm-charts/dirigible/templates/dirigible.yaml
@@ -173,11 +173,7 @@ spec:
 ---
 
 {{- if .Values.ingress.enabled -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: Ingress
 metadata:
   name: {{ include "dirigible.fullname" . }}
@@ -190,26 +186,18 @@ metadata:
 spec:
 {{- if .Values.ingress.tls }}
   tls:
-  {{- range .Values.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
+      - {{ .Release.Name }}.{{ .Values.ingress.host }}
+      secretName: {{ .Release.Name }}-tls
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .Release.Name }}.{{ .Values.ingress.host }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
+          - path: /
             backend:
               serviceName: {{ include "dirigible.fullname" . }}
               servicePort: {{ .Values.service.port }}
-        {{- end }}
-  {{- end }}
 {{- end }}
 
 ---
