--- a/releng/helm-charts/dirigible/values.yaml
+++ b/releng/helm-charts/dirigible/values.yaml
@@ -43,13 +43,8 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: ""
-      paths: []
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  host: ""
+  tls: false
 
 kyma:
   enabled: false
