#762 [Helm] Chars - YAML fixes

--- a/releng/helm-charts/dirigible/templates/dirigible.yaml
+++ b/releng/helm-charts/dirigible/templates/dirigible.yaml
@@ -38,13 +38,12 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- if .Values.database.enabled }}
       initContainers:
-      - name: check-db-ready
-        image: postgres:9.6.5
-        command:
-          - sh
-          - -c
-          - until pg_isready -h {{ include "dirigible.fullname" . }}-database -p 5432; do echo waiting for database;
-          sleep 2; done;
+        - name: check-db-ready
+          image: postgres:9.6.5
+          command:
+            - sh
+            - -c
+            - until pg_isready -h {{ include "dirigible.fullname" . }}-database -p 5432; do echo waiting for database; sleep 2; done;
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
