--- a/releng/helm-charts/dirigible/templates/keycloak.yaml
+++ b/releng/helm-charts/dirigible/templates/keycloak.yaml
@@ -92,13 +92,12 @@ spec:
     spec:
       {{- if .Values.keycloak.database.enabled }}
       initContainers:
-      - name: check-db-ready
-        image: postgres:9.6.5
-        command:
-          - sh
-          - -c
-          - until pg_isready -h {{ .Values.keycloak.name }}-database -p 5432; do echo waiting for database;
-          sleep 2; done;
+        - name: check-db-ready
+          image: postgres:9.6.5
+          command:
+            - sh
+            - -c
+            - until pg_isready -h {{ .Values.keycloak.name }}-database -p 5432; do echo waiting for database; sleep 2; done;
       {{- end }}
       containers:
         - name: {{ .Values.keycloak.name }}
