--- a/releng/helm-charts/dirigible/templates/dirigible.yaml
+++ b/releng/helm-charts/dirigible/templates/dirigible.yaml
@@ -192,7 +192,7 @@ spec:
 ---
 
 {{- if .Values.ingress.enabled }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "dirigible.fullname" . }}
