--- a/releng/helm-charts/dirigible/templates/keycloak.yaml
+++ b/releng/helm-charts/dirigible/templates/keycloak.yaml
@@ -185,7 +185,7 @@ spec:
 ---
 
 {{- else if .Values.ingress.enabled }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.keycloak.name }}
