--- a/releng/helm-charts/dirigible/templates/keycloak.yaml
+++ b/releng/helm-charts/dirigible/templates/keycloak.yaml
@@ -207,8 +207,11 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: {{ .Values.keycloak.name }}
-              servicePort: 8080
+              service:
+                name: {{ .Values.keycloak.name }}
+                port: 
+                  number: 8080
 {{- end }}
 {{- end }}
