--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -85,6 +85,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-pdf</artifactId>
+			<version>5.9.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-facade-platform</artifactId>
 			<version>5.9.0-SNAPSHOT</version>
 		</dependency>
