--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -26,6 +26,7 @@
 		<module>api-io</module>
 		<module>api-mail</module>
 		<module>api-messaging</module>
+		<module>api-pdf</module>
 		<module>api-platform</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
