--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -19,6 +19,7 @@
 		<module>api-security</module>
 		<module>api-core</module>
 		<module>api-database</module>
+		<module>api-documents</module>
 		<module>api-http</module>
 		<module>api-http-async</module>
 		<module>api-tests</module>
@@ -26,7 +27,6 @@
 		<module>api-io</module>
 		<module>api-mail</module>
 		<module>api-messaging</module>
-		<module>api-pdf</module>
 		<module>api-platform</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
