--- a/api/api-javascript/api-all/pom.xml
+++ b/api/api-javascript/api-all/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-documents</artifactId>
+            <version>5.9.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-http</artifactId>
             <version>5.9.0-SNAPSHOT</version>
         </dependency>
