--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-anonymous .
         docker tag dirigible-anonymous dirigiblelabs/dirigible-anonymous:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-anonymous:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Anonymous - Runtime
       run: |
@@ -48,6 +49,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-runtime-anonymous .
         docker tag dirigible-runtime-anonymous dirigiblelabs/dirigible-runtime-anonymous:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-runtime-anonymous:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push OpenShift
       run: |
@@ -58,6 +60,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-openshift .
         docker tag dirigible-openshift dirigiblelabs/dirigible-openshift:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-openshift:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push SAP Cloud Foundry
       run: |
@@ -78,6 +81,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-sap-cf-runtime .
         docker tag dirigible-sap-cf-runtime dirigiblelabs/dirigible-sap-cf-runtime:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-sap-cf-runtime:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push SAP Kyma
       run: |
@@ -98,6 +102,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-sap-kyma-runtime .
         docker tag dirigible-sap-kyma-runtime dirigiblelabs/dirigible-sap-kyma-runtime:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-sap-kyma-runtime:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Dirigible
       run: |
@@ -108,6 +113,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-all .
         docker tag dirigible-all dirigiblelabs/dirigible-all:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-all:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Dirigible - Runtime
       run: |
@@ -118,6 +124,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-runtime .
         docker tag dirigible-runtime dirigiblelabs/dirigible-runtime:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-runtime:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Dirigible - Trial
       run: |
@@ -128,6 +135,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-trial .
         docker tag dirigible-trial dirigiblelabs/dirigible-trial:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-trial:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Dirigible - Tomcat
       run: |
@@ -135,6 +143,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-tomcat -f Dockerfile-tomcat .
         docker tag dirigible-tomcat dirigiblelabs/dirigible-tomcat:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-tomcat:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../
     - name: Push Dirigible - Keycloak
       run: |
@@ -145,6 +154,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-keycloak .
         docker tag dirigible-keycloak dirigiblelabs/dirigible-keycloak:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-keycloak:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
     - name: Push Dirigible - Keycloak - Runtime
       run: |
@@ -155,6 +165,7 @@ jobs:
         docker build --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION -t dirigible-runtime-keycloak .
         docker tag dirigible-runtime-keycloak dirigiblelabs/dirigible-runtime-keycloak:$DIRIGIBLE_VERSION
         docker push dirigiblelabs/dirigible-runtime-keycloak:$DIRIGIBLE_VERSION
+        docker image prune -a -f
         cd ../../
 
 #-----------------Publish to DockerHub-------------------#
