--- a/api/api-facade/api-spark/pom.xml
+++ b/api/api-facade/api-spark/pom.xml
@@ -69,9 +69,24 @@
 		</dependency>
 
 		<!-- Spark dependencies -->
-		
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.12</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.19</version>
+		</dependency>
 		<!-- / Spark dependencies -->
-		
+
 
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
